# ZeronEngine

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  GenerateProject.bat  InstallDependencies.bat  LICENSE  README.md
Engine/: CMakeLists.txt  UpdateSourceFiles.bat
Engine/Config/: Input.json
Engine/Modules/ZeronClient/: CMakeLists.txt
Engine/Modules/ZeronClient/Source/: ZeronClient.h
Engine/Modules/ZeronCore/: CMakeLists.txt
Engine/Modules/ZeronCore/Core/: Core.h  Logger.cpp  Logger.h  SystemHandle.h
Engine/Modules/ZeronGraphics/: CMakeLists.txt
Engine/Modules/ZeronGraphics/Graphics/: Buffer.cpp  Buffer.h  FrameBuffer.h  Graphics.cpp  GraphicsContext.h  PipelineBinding.h  Primitives.cpp  ResourceLayout.cpp  ResourceLayout.h  Sampler.h  Shader.cpp  Shader.h  SwapChain.h  VertexLayout.cpp
Engine/Modules/ZeronRenderer/: CMakeLists.txt
Engine/Modules/ZeronRenderer/Source/: ZeronRenderer.h
Engine/Modules/ZeronRenderer/Window/: Window.cpp  Window.h  WindowConfig.h  WindowEvents.cpp  WindowEvents.h
Engine/Resources/: CMakeLists.txt
Engine/Resources/Assets/Models/: TestHumanoid_Model.fbx  TestHumanoid_Model.gltf
Engine/Resources/Shaders/: Basic2D.frag.hlsl  Basic2D.vert.hlsl  Basic2D.zsl  ComputeTest.comp.hlsl  LightCulling.zsl  ShadowMap.zsl  Skybox.zsl  Standard.frag.hlsl  Standard.vert.hlsl  Standard.zsl  Wireframe.zsl  ZeronShaderUtils.h.hlsl
Engine/Resources/Shaders/HLSL/: Standard.vs.hlsl
Engine/Source/: ZeronEngine.cpp  ZeronEngine.h
Engine/Source/Core/Private/: Application.cpp  GLFWHelpers.cpp  Hash.cpp  Input.cpp  Logger.cpp  Window.cpp  main.cpp
Engine/Source/Core/Public/: Application.h  Core.h  EntryPoint.h  GLFWHelpers.h  Hash.h  IModule.h  Input.h  Logger.h  Window.h
Engine/Source/Utils/Public/: Color.h
Engine/Source/ZeronClient/: CMakeLists.txt
Engine/Source/ZeronClient/Application/: Application.h
Engine/Source/ZeronCore/: CMakeLists.txt  PCH.h
Engine/Source/ZeronCore/Common/: Assert.h  Logger.cpp  Logger.h  PCH.h  Result.h  SystemHandle.h  Time.h  TypeTraits.h  Util.h
Engine/Source/ZeronCore/Core/: Assert.h  Core.cpp  Core.h  CorePCH.h  FileSystem.h  FileSystemError.h  Locator.h  Logger.cpp  Logger.h  SystemEvent.h  SystemHandle.h  TypeTraits.h  Util.cpp  Util.h
Engine/Source/ZeronCore/Entity/: ComponentContainer.h  Entity.h  EntityManager.cpp  EntityManager.h
Engine/Source/ZeronCore/Math/: Math.h  Quat.h  Vec3.h  Vec4.h
Engine/Source/ZeronDB/: CMakeLists.txt
Engine/Source/ZeronGUI/: CMakeLists.txt
Engine/Source/ZeronGraphics/: CMakeLists.txt
Engine/Source/ZeronGraphics/Graphics/: Buffer.cpp  Buffer.h  CommandBuffer.h  FrameBuffer.h  Graphics.cpp  Graphics.h  GraphicsAdapter.cpp  GraphicsAdapter.h  GraphicsContext.h  GraphicsTypes.cpp  GraphicsTypes.h  Pipeline.cpp  Pipeline.h  PipelineBinding.h  Primitives.h  RenderPass.h  ResourceLayout.cpp  ResourceLayout.h  Sampler.h  Shader.cpp  Shader.h  SwapChain.cpp  SwapChain.h  Texture.cpp  Texture.h  VertexLayout.cpp  VertexLayout.h
Engine/Source/ZeronNet/: CMakeLists.txt
Engine/Source/ZeronPhysics/: CMakeLists.txt
Engine/Source/ZeronPlatform/: CMakeLists.txt
Engine/Source/ZeronPlatform/Input/: GamepadCode.cpp  GamepadCode.h  KeyCode.cpp  KeyCode.h  MouseCode.cpp
Engine/Source/ZeronPlatform/Platform/: CommandLineArgs.cpp  CommandLineArgs.h  EntryPoint.h  FileSystem.cpp  FileSystem.h  FileSystemError.h  FileSystemHandler.h  Platform.cpp  Platform.h  SystemEvent.h  SystemEventProcessor.h  Window.cpp  Window.h  WindowConfig.cpp  WindowConfig.h  WindowManager.cpp  WindowManager.h
Engine/Source/ZeronRender/: CMakeLists.txt
Engine/Source/ZeronRender/Render/: Image.cpp  Image.h
Engine/Source/ZeronRenderer/: CMakeLists.txt  ZeronRenderer.h
Engine/Source/ZeronRenderer/Graphics/: Buffer.cpp  Buffer.h  Graphics.cpp  Graphics.h  GraphicsContext.cpp  GraphicsContext.h  GraphicsTypes.cpp  GraphicsTypes.h  Primitives.cpp  Primitives.h  RenderTarget.cpp  RenderTarget.h  Shader.cpp  Shader.h  SwapChain.cpp  SwapChain.h  Texture.cpp  Texture.h
Engine/Source/ZeronRenderer/Renderer/: Camera.cpp  Camera.h  Image.cpp  Image.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h
Engine/Source/ZeronRenderer/Window/: Window.cpp  (+5 more)
Engine/Source/ZeronScript/: CMakeLists.txt
Engine/Tests/: CMakeLists.txt
Engine/Tests/TestModule_ZeronCore/: CMakeLists.txt  EntityTests.cpp
Engine/Tests/TestModule_ZeronDB/: CMakeLists.txt  MapStorageTests.cpp
Engine/Tests/TestModule_ZeronNet/: CMakeLists.txt  HttpMessageTests.cpp  WebSocketFrameTests.cpp  WebSocketMessageTests.cpp
Engine/Tests/TestModule_ZeronPhysics/: CMakeLists.txt  PhysicsTests.cpp
Engine/Tests/TestModule_ZeronPlatform/: CMakeLists.txt  FileSystemTests.cpp  WindowTests.cpp  main.cpp
Engine/Tests/TestModule_ZeronRenderer/: CMakeLists.txt  WindowTests.cpp
Engine/Tests/TestModule_ZeronScript/: CMakeLists.txt
Engine/Tests/ZeronCoreTests/: CMakeLists.txt  main.cpp
Engine/Tests/ZeronRendererTests/: CMakeLists.txt  WindowTests.cpp  main.cpp
Engine/Tests/ZeronTestApp/: CMakeLists.txt  main.cpp
Engine/Tests/ZeronTestFramework/: CMakeLists.txt  ZeronTestFramework.cpp  ZeronTestFramework.h
Engine/Tools/: clean_dependencies.py  install_dependencies.py
Engine/Tools/CMake/: ZeronAndroidToolchain.cmake  ZeronAndroidUtils.cmake  ZeronMacros.cmake  ZeronProjectUtils.cmake  ZeronShaderCompiler.cmake  ZeronShaderUtils.cmake  ZeronUtils.cmake  update_cmake.py
Engine/Tools/Python/: ZeronSubmodule.py  clean_dependencies.py  install_dependencies.py  requirements.txt
Engine/Tools/Utils/: zip_helpers.py
Sandbox/: CMakeLists.txt
Sandbox/Source/: Sandbox.cpp  Sandbox.h  main.cpp
Sandbox/Source/Samples/: SampleGraphics.cpp  SampleGraphics.h
Sandbox/Source/shared/: Sandbox.h
Sandbox/Source/win32/: main.cpp
Sandbox/android/: CMakeLists.txt  main.cpp
Sandbox/linux/: CMakeLists.txt  main.cpp
Sandbox/shared/: SampleD3D11.cpp  SampleD3D11.h  SampleVulkan.cpp  SampleVulkan.h  Sandbox.cpp  Sandbox.h
Sandbox/win32/: CMakeLists.txt  main.cpp
(+735 files in other folders)
